Fixed #13, added scrollbar, modified styling
Also began bootstrap implementation

--- a/style/start.css
+++ b/style/start.css
@@ -1,10 +1,14 @@
 html, body{
 	background-image: url("../img/upfeathers.png");
-	overflow: hidden;
+	/*overflow: hidden;*/
 	width: 100%;
 	height: 100%;
-	position: relative;
-	margin: 0%;
+	position: absolute;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	/*margin: 0%;*/
 }
 #bar {
 	background-image: url("../img/diagonal_waves.png");
@@ -14,7 +18,7 @@ html, body{
 	height: auto;
 	margin-left: 5%;
 	margin-right: 5%;
-	margin-top: 5%;
+	margin-top: 3%;
 	margin-bottom: 2%;
 	-webkit-box-shadow: 0px 0px 8px 2px #a8a8a8;
 	-moz-box-shadow: 0px 0px 8px 2px #a8a8a8;
@@ -129,4 +133,17 @@ form {
 	z-index: 903;
 	left: 1%;
 	top: 95%;
+}
+::-webkit-scrollbar {
+    height: 12px;
+    width: 12px;
+    background: #a8a8a8;
+}
+::-webkit-scrollbar-thumb {
+	background: #ECECEC;
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+::-webkit-scrollbar-corner {
+    background: #a8a8a8;
 }
